--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,26 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.footer-dark {
+  background-color: #333;
+  /* Color de fondo oscuro */
+  color: #fff;
+  /* Color de texto claro */
+  padding: 20px 0;
+  /* Añade un poco de espacio interno al footer */
+  position: fixed;
+  /* Fija el footer en la parte inferior */
+  left: 500;
+  /* Alinea el footer a la izquierda */
+  bottom: 0;
+  /* Fija el footer en la parte inferior */
+  width: 100%;
+  /* Ancho completo */
 }
+
+.container {
+  max-width: 960px;
+  /* Ancho máximo del contenido del footer */
+  margin: 0 auto;
+  /* Centra el contenido del footer horizontalmente */
+}
+
+p {
+  margin: 0;
+  /* Elimina el margen predeterminado del párrafo */
+}
+
+
 
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -49,9 +66,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -62,9 +81,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
